#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(ezycli, 1.0.0, chain710@gmail.com)
AC_CONFIG_SRCDIR([conn_pool.cpp])
AC_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE(ezycli, 1.0.0)

AC_PREFIX_DEFAULT(/usr/local/ezycli/)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
#AC_PROG_LN_S
#AC_PROG_MAKE_SET
#AC_PROG_RANLIB
#AC_PROG_INSTALL
AC_PROG_LIBTOOL

# Checks for libraries.


# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([
    Makefile
])
